force-app/main/default/objects/ConfigAuth__c/ConfigAuth__c.object-meta.xml
<CustomObject>
    <label>ConfigAuth</label>
    <nameField>
        <label>ConfigAuth</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ConfigAuth</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>