force-app/main/default/objects/ConfigAuth__c/fields/heroku_app_name__c.field-meta.xml
<CustomField>
    <fullName>heroku_app_name__c</fullName>
    <description>The Heroku App Name (e.j. mlimit)</description>
    <inlineHelpText>The Heroku App Name (e.j. mlimit)</inlineHelpText>
    <label>heroku app name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>