force-app/main/default/objects/ConfigAuth__c/fields/issued_at__c.field-meta.xml
<CustomField>
    <fullName>issued_at__c</fullName>
    <label>issued_at</label>
    <type>DateTime</type>
</CustomField>