force-app/main/default/objects/ConfigAuth__c/fields/oauth_signature__c.field-meta.xml
<CustomField>
    <fullName>oauth_signature__c</fullName>
    <label>oauth_signature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>