force-app/main/default/objects/ConfigAuth__c/fields/orgid__c.field-meta.xml
<CustomField>
    <fullName>orgid__c</fullName>
    <description>Organization Id 15 digit</description>
    <inlineHelpText>Organization Id 15 digit</inlineHelpText>
    <label>orgid</label>
    <length>15</length>
    <type>Text</type>
</CustomField>