force-app/main/default/objects/ConfigAuth__c/fields/token_type__c.field-meta.xml
<CustomField>
    <fullName>token_type__c</fullName>
    <label>token_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>